--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,47 @@
 .loading_map {
-  font-size: 30em;
+  /* font-size: 30em; */
   text-align: center;
   border: 3px solid green;
+}
+
+.list-info {
+
+}
+a {
+  padding: 5px;
+}
+nav {
+  z-index: 1;
+  background-color: #97D3D3;
+  color: #fff;
+  width: 210px;
+  height: 100%;
+  padding: 0.5em;
+  position: absolute;
+  /* This trasform moves the drawer off canvas. */
+  -webkit-transform: translate(-320px, 0);
+  transform: translate(-320px, 0);
+  /* Optionally, we animate the drawer. */
+  transition: transform 0.3s ease;
+}
+nav.open {
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
+.search-marker {
+  margin: 1em;
+  color: #333;
+}
+header {
+  width: 100%;
+  height: 2em;
+  padding: 5px;
+  box-sizing: content-box;
+  background-color: #97D3D3;
+  box-sizing: content-box;
+}
+.a-nav {
+  position: absolute;
+  top: 5px;
+  left: 5px;
 }
